# ACBF-Editor

./: .pre-commit-config.yaml  README.md  acbfe.desktop  acbfe.spec  deb_build.txt  install.py  pyproject.toml
debian/: changelog  control  copyright  rules
images/: acbfe.xpm
src/: acbfdocument.py  acbfe.py  constants.py  cover_picker.py  detection.py  edit_authors.py  edit_characters.py  edit_content_rating.py  edit_contents.py  edit_dbref.py  edit_genres.py  edit_history.py  edit_keywords.py  edit_languages.py  edit_series.py  edit_sources.py  edit_styles.py  editstylesdialog.py  filechooser.py  fileprepare.py  fontselectiondialog.py  frames_editor.py  main.py  portability.py  preferences.py  prefsdialog.py  text_layer.py  toolbar.py  utils.py
