[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
warn_return_any = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
lint.extend-safe-fixes = ["TCH"]
lint.extend-select = ["TCH"]

[tool.ruff.format]
